# comp-322

./: .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  README.md
src/: main.c
